[gd_scene load_steps=23 format=3 uid="uid://6thl7vbhllc"]

[ext_resource type="Script" path="res://MeleeEnemy.gd" id="1_jqonc"]
[ext_resource type="PackedScene" uid="uid://b482buce5qyfn" path="res://funds.tscn" id="2_iec0l"]
[ext_resource type="Texture2D" uid="uid://3tmk2h3hunv3" path="res://Textures/Scorpion/ScorpionAttack.png" id="2_l4snb"]
[ext_resource type="Texture2D" uid="uid://bnhi4rym3dii6" path="res://Textures/Scorpion/Scorpion.png" id="3_s75tg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jeimx"]
atlas = ExtResource("2_l4snb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvku3"]
atlas = ExtResource("2_l4snb")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvjm2"]
atlas = ExtResource("2_l4snb")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl7x6"]
atlas = ExtResource("2_l4snb")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl8le"]
atlas = ExtResource("2_l4snb")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v65lb"]
atlas = ExtResource("3_s75tg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_guba5"]
atlas = ExtResource("3_s75tg")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k84t1"]
atlas = ExtResource("3_s75tg")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6556i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeimx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvku3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvjm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl7x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl8le")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v65lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guba5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k84t1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_myh54"]
radius = 65.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sit17"]
size = Vector2(111, 91)

[sub_resource type="Animation" id="Animation_xyrhm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dw1tk"]
resource_name = "attack"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack", &"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvfnj"]
_data = {
"RESET": SubResource("Animation_xyrhm"),
"attack": SubResource("Animation_dw1tk")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6mk6s"]

[sub_resource type="Theme" id="Theme_brxaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yf8p"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.405412, 0.871389, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nye4o"]
bg_color = Color(1, 0.152941, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.34792, 0.879276, 1, 1)

[node name="Scorpion" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jqonc")
drop = ExtResource("2_iec0l")
damage = 15

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6556i")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_myh54")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-36.5, 13.5)
shape = SubResource("RectangleShape2D_sit17")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rvfnj")
}

[node name="HealthBar" type="ProgressBar" parent="."]
light_mask = 1048575
material = SubResource("CanvasItemMaterial_6mk6s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -55.0
offset_right = 387.0
offset_bottom = 2.00001
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_brxaj")
theme_override_styles/background = SubResource("StyleBoxFlat_5yf8p")
theme_override_styles/fill = SubResource("StyleBoxFlat_nye4o")
value = 100.0
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
